@@ -3,3 +3,4 @@ Version 0.2
     * Work with kid-0.6
     * Do not use enumerate() as that breaks on python-2.2
     * Rename repoview into repoview.py
+    * Rename __orphans__ to __nogroup__
